risc0/zirgen/dsl/test/repro/back_of_a_type.zir
// RUN: not zirgen --emit=zhlt %s 2>&1 | FileCheck %s

component Count() {
  a : Reg;
  a := Reg(1+a@1);
}

component PrevCount() {
  // CHECK: error: Back expression does not have a value
  c := Count@1;
}

